--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,10 @@ set -g status-left '#[fg=blue]#H #[fg=black]• #[fg=blue,bright]#(uname -r | cu
 #    index
 set -g base-index 1
 
-# diretional keys like vim hjkl
+# keys
+bind-key C-a last-window # C-a C-a for last active window#   
+
+#   diretional keys like vim hjkl
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
