remove delay on escape key on tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,9 @@ set -g status-left '#[fg=blue]#H #[fg=black]• #[fg=blue,bright]#(uname -r | cu
 #    index
 set -g base-index 1
 
+# Remove delay on escape
+set -sg escape-time 0
+
 # keys
 bind-key C-a last-window # C-a C-a for last active window#   
 
